Disable remaining rocky10 distro jobs
Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-openstack_hosts/+/968491
Change-Id: I15f3a7438ac9cfe0a4631504e26de2031d94fabd
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -195,12 +195,10 @@
     check:
       jobs:
         - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-9
-        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_distro_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-9
-        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_distro_lxc-ubuntu-noble
 
 - project-template:
@@ -272,7 +270,8 @@
     check:
       jobs:
         - openstack-ansible-deploy-aio_distro_metal-rockylinux-9
-        - openstack-ansible-deploy-aio_distro_metal-rockylinux-10
+        - openstack-ansible-deploy-aio_distro_metal-rockylinux-10:
+            voting: false
         - openstack-ansible-deploy-aio_distro_metal-ubuntu-noble
     experimental:
       jobs:
