tox: bump minimum version and remove linters from envlist
Change-Id: Iee81368d0a4059b2e17d32036fed018bf4a8342b
Signed-off-by: Ivan Anfimov <lazekteam@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-minversion = 4.4
+minversion = 4.6.0
 skipsdist = True
-envlist = linters,docs,releasenotes,inventory,py3-inventory
+envlist = docs,releasenotes,inventory,py3-inventory
 
 [testenv]
 usedevelop = True
@@ -35,7 +35,9 @@ setenv =
     ANSIBLE_LINT_PARAMS=--exclude={homedir}/.ansible/roles
 
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+    -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+    -r{toxinidir}/doc/requirements.txt
 commands =
     doc8 doc
     docstheme-build-translated.sh
@@ -44,11 +46,11 @@ setenv =
 
 
 [testenv:deploy-guide]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 commands = sphinx-build -a -E -W -d deploy-guide/build/doctrees --keep-going -b html deploy-guide/source deploy-guide/build/html
 
 [testenv:deploy-guide-pdf-docs]
-deps = {[testenv:deploy-guide]deps}
+deps = {[testenv:docs]deps}
 allowlist_externals =
   make
 commands =
@@ -69,7 +71,7 @@ extensions = .rst
 ignore = D001
 
 [testenv:releasenotes]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 commands =
     sphinx-build -a -E -W -d releasenotes/build/doctrees --keep-going -b html releasenotes/source releasenotes/build/html
 
