--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -2,331 +2,331 @@
 - name: ansible-hardening
   scm: git
   src: https://opendev.org/openstack/ansible-hardening
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 01aecdc5ba904e36d25a54f768d61013c0a4a5ae
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: frrouting
   scm: git
   src: https://opendev.org/openstack/ansible-role-frrouting
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-12'
+  version: 8010edaad234290fd920116829802db1be8f40b3
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: httpd
   src: https://opendev.org/openstack/ansible-role-httpd
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-04-24'
+  version: e281df1a5da721fcc53ab223cd2b183b2ab5a94d
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: pki
   src: https://opendev.org/openstack/ansible-role-pki
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 631b4d256ab13154070eb10bcc06d8be6e4363aa
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: python_venv_build
   src: https://opendev.org/openstack/ansible-role-python_venv_build
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-24'
+  version: dd99a0452fea527fa7e3a6f752f9597a98e70719
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: systemd_mount
   src: https://opendev.org/openstack/ansible-role-systemd_mount
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-12'
+  version: fa50fe2cb9600f14f5ed7a02f8e22a088e77e794
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: systemd_networkd
   src: https://opendev.org/openstack/ansible-role-systemd_networkd
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-22'
+  version: 4a507ab54524a9d314f25da62ec0cc183f03510a
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: systemd_service
   src: https://opendev.org/openstack/ansible-role-systemd_service
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-05-03'
+  version: 0c528e21911fac6ff2abcf8dbe9f4890679eabaa
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: uwsgi
   src: https://opendev.org/openstack/ansible-role-uwsgi
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-12'
+  version: 91fa0ba97b9ee350ce0affc2c1278b320de5bb78
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: zookeeper
   src: https://opendev.org/openstack/ansible-role-zookeeper
   scm: git
-  version: master
-  trackbranch: master
-  shallow_since: '2025-10-02'
+  version: 635b8618fcf877f5dd3460faf255517d26bd9c56
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: apt_package_pinning
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-apt_package_pinning
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-12'
+  version: 2d8d87120b8b937ddbfa52338bf21df1ed4b8972
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: ceph_client
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-ceph_client
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-22'
+  version: da2e345ae127e24318c29629d7115b3b7c8fab37
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: galera_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-galera_server
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-24'
+  version: 350ec2760645991ecc2a4de97bd252b26e2cacb7
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: haproxy_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-haproxy_server
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-12'
+  version: 6fdde23b07a77f14dd2af03420d1c9abec679240
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: lxc_container_create
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_container_create
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 8e1d8bd390c198adcee3fb0467febdfa08184904
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: lxc_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_hosts
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-23'
+  version: 889dddbd7e2154bd3cd10698cd227ec9981dc69a
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: memcached_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-memcached_server
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 1a098fa7f753f0846a14c4e6ebdcf29168567cd5
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: openstack_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_hosts
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-30'
+  version: f541dada6371e26762efbef8dfdf0648b2c91f4b
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: openstack_openrc
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_openrc
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 04abc2b2dcfcad8ea8745f9484a9982295fd5cf1
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_adjutant
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_adjutant
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: ff967920cf9dae391857aa16d6a1d72f5dde1df8
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_aodh
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_aodh
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: db16bf2361a45844f862599086e80c70d485de40
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_barbican
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_barbican
-  version: master
-  trackbranch: master
-  shallow_since: '2025-10-02'
+  version: d5a72fec746032c2575f9b6bd904fa305d992224
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_blazar
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_blazar
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: cc8b11aac3f0488aa5e1ca406ad67b4e5f6947c1
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_ceilometer
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ceilometer
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 15002aa4bcf0291dae3f001a839779c321f0ede3
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_cinder
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cinder
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-23'
+  version: a81b59b7d163535306f6b02f7924ad892b51b6ff
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_cloudkitty
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cloudkitty
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: d074ca119d05e007217b6183ce680dd8cd24ebd3
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_designate
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_designate
-  version: master
-  trackbranch: master
-  shallow_since: '2025-10-01'
+  version: dc6e9c505fd5897fd399c21c11866ff58921acc4
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_glance
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_glance
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-18'
+  version: 912144252fd6b07fcf171d04763532b11af38dcd
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_gnocchi
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_gnocchi
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: f2467569e0241199b461056b699aff7962b1053d
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_heat
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_heat
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 59ced0a1aa191147a063fad47e37f1f2db68e8c1
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_horizon
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_horizon
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: d11493994c72650e04f49f58add3d649400e2b2b
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_ironic
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ironic
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 42a04c5110f6b7585cf975021a0f587c69cbb540
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_keystone
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_keystone
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 1281c73cbe51cceb5a7949c711019916e4757e77
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_magnum
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_magnum
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 799634eecf5cff7b663b771650e8731fb16e8258
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_manila
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_manila
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 46b729f39c47da8ab026dd7f38d3950aace512e8
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_masakari
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_masakari
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: c55e0369d7844cacb74dd9788b4c17d6ffb458ed
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_mistral
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_mistral
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: c866f46db19d2ec97223c930d9a45dcfb4f485dc
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_neutron
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_neutron
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-05'
+  version: 99b45696d231915113049f9019aea960638f9688
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_nova
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_nova
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-28'
+  version: 3b5c937173c79e2f19af515e15afd7d031a283ca
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_octavia
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_octavia
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-24'
+  version: f34847d6054efd8a30298d6ab2f916d06e751ad0
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_placement
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_placement
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-23'
+  version: 312d76aea49baea3f834e9969cca909d30a19056
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_rally
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_rally
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-23'
+  version: 6644d949da74100fabf2c462dd3ab387458cb30d
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_skyline
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_skyline
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: e4a6bcba2ff2db6f207d177446c92ea8feaf16fc
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_swift
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_swift
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-11'
+  version: 489cd4de6069f233d0ba7d95c7e42331b834734a
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_tacker
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tacker
-  version: master
-  trackbranch: master
-  shallow_since: '2025-02-11'
+  version: 4e47e1bf30aacb71292fc247b7f00ac81fec33de
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_tempest
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tempest
-  version: master
-  trackbranch: master
-  shallow_since: '2025-10-05'
+  version: 8b08cb5403830c31c794937f09c3137737bfca51
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_trove
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_trove
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: bb88604714d3cfc743f2c5d330db7c5a83fb9032
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: os_zun
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_zun
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 8660042879a932b40388dbd9711459ff27f855fd
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: rabbitmq_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-rabbitmq_server
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: 40bd53bcc1c2eb19848ea95fc4615921bbae4652
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 - name: repo_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-repo_server
-  version: master
-  trackbranch: master
-  shallow_since: '2025-09-25'
+  version: df66f20c1676a2626adba67ad41223a685454786
+  trackbranch: stable/2025.2
+  shallow_since: '2025-12-03'
 # External dependencies
 - name: keepalived
   scm: git
   src: https://github.com/evrardjp/ansible-keepalived
-  version: master
+  version: c9b1c4a1552816742653fc73010c6b99a1f4855f
   trackbranch: master
   shallow_since: '2025-02-13'
 - name: pacemaker_corosync
   scm: git
   src: https://github.com/noonedeadpunk/ansible-pacemaker-corosync
-  version: master
+  version: 10032fe8b7fa17a425f33b00a4f586144d1b8805
   trackbranch: master
   shallow_since: '2025-08-18'
 - name: resolvconf
   scm: git
   src: https://github.com/logan2211/ansible-resolvconf
-  version: master
+  version: 2c0fad77e0f7b496179b2ba4d2b07af1fba36aa7
   trackbranch: master
   shallow_since: '2025-05-15'
 - name: unbound
   scm: git
   src: https://github.com/noonedeadpunk/ansible-role-unbound
-  version: master
+  version: d500b19c7160349f74c97da59fe37532ce545c40
   trackbranch: master
   shallow_since: '2025-03-26'
 - name: ceph-ansible
   scm: git
   src: https://github.com/ceph/ceph-ansible
-  version: stable-8.0
+  version: 1a613004e3fb3804f26a60369cec32ef9255bd2d
   trackbranch: stable-8.0
   shallow_since: '2025-09-16'
