--- a/inventory/group_vars/skyline_all/source_git.yml
+++ b/inventory/group_vars/skyline_all/source_git.yml
@@ -21,5 +21,5 @@ skyline_git_install_branch: 0eb553bc742834c29676b6ad19aaa95a5a250306
 skyline_git_track_branch: stable/2025.2
 
 skyline_console_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-console"
-skyline_console_git_install_branch: 7.0.0.0rc1
+skyline_console_git_install_branch: 7.0.0
 skyline_console_git_track_branch: None
