Switch to Gazpacho development
With branching of 2025.2 Flamingo it's time to switch to 2026.1 Gazpacho
tracking.

Change-Id: Ie3377170efe83e8109b1c3ff9b099f5962458292
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/ansible-collection-requirements.yml
+++ b/ansible-collection-requirements.yml
@@ -11,7 +11,7 @@ collections:
 - name: openstack.osa
   source: https://opendev.org/openstack/openstack-ansible-plugins
   type: git
-  version: d2aefc8c85f447395f93e59b230c34a0e47c4695
+  version: master
 - name: community.general
   source: https://github.com/ansible-collections/community.general
   type: git
