--- a/inventory/group_vars/aodh_all/source_git.yml
+++ b/inventory/group_vars/aodh_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Aodh service
 aodh_git_repo: "{{ openstack_opendev_base_url }}/openstack/aodh"
-aodh_git_install_branch: 64659dab51b504024eff26faf8c25ebad8acc24c
-aodh_git_track_branch: stable/2025.2
+aodh_git_install_branch: 21c607cc46ede9a92557a27893419e5a87bfd414
+aodh_git_track_branch: master
