--- a/inventory/group_vars/barbican_all/source_git.yml
+++ b/inventory/group_vars/barbican_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Barbican service
 barbican_git_repo: "{{ openstack_opendev_base_url }}/openstack/barbican"
-barbican_git_install_branch: 1fd20ef915ab29e7414e09ce9cd731fe1003c1f3
-barbican_git_track_branch: stable/2025.2
+barbican_git_install_branch: 25ef5677a674088bfb433ab39df3a75ac7b3cf8f
+barbican_git_track_branch: master
