--- a/inventory/group_vars/blazar_all/source_git.yml
+++ b/inventory/group_vars/blazar_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Blazar service
 blazar_git_repo: "{{ openstack_opendev_base_url }}/openstack/blazar"
-blazar_git_install_branch: 49e42f4157fec69268eb1c99da946f2566508ad1
-blazar_git_track_branch: stable/2025.2
+blazar_git_install_branch: 1c175feaa081606af6fb5edf7d7dff03247dc0d7
+blazar_git_track_branch: master
 
 ## Blazar Nova Service
 blazar_nova_git_repo: "{{ openstack_opendev_base_url }}/openstack/blazar-nova"
-blazar_nova_git_install_branch: f5eddb349d5025fddee12c5f20dd7ba51974dd9d
-blazar_nova_git_track_branch: stable/2025.2
+blazar_nova_git_install_branch: 14fab9e9b7252b4f8d29feb7e8b4ee449bd8f34d
+blazar_nova_git_track_branch: master
