--- a/inventory/group_vars/ceilometer_all/source_git.yml
+++ b/inventory/group_vars/ceilometer_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Ceilometer service
 ceilometer_git_repo: "{{ openstack_opendev_base_url }}/openstack/ceilometer"
-ceilometer_git_install_branch: 00081e067c545b979ed21c371f73847f78bd6fc0
-ceilometer_git_track_branch: stable/2025.2
+ceilometer_git_install_branch: 942220b7d78f392e0db08dd134df6bde64c0bcf8
+ceilometer_git_track_branch: master
