--- a/inventory/group_vars/cinder_all/source_git.yml
+++ b/inventory/group_vars/cinder_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Cinder service
 cinder_git_repo: "{{ openstack_opendev_base_url }}/openstack/cinder"
-cinder_git_install_branch: 6676290ea9c9d0369c283172dc3e9d913ca01c6f
-cinder_git_track_branch: stable/2025.2
+cinder_git_install_branch: f38c2950b13a2cde2ae9f146cf525a9d54c8b830
+cinder_git_track_branch: master
