--- a/inventory/group_vars/glance_all/source_git.yml
+++ b/inventory/group_vars/glance_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Glance service
 glance_git_repo: "{{ openstack_opendev_base_url }}/openstack/glance"
-glance_git_install_branch: 81a6e1acfa50da1977dd1b39d031baaa4b9f799e
-glance_git_track_branch: stable/2025.2
+glance_git_install_branch: 955d086873b9368090134aa01d5226f9b9fa19df
+glance_git_track_branch: master
