--- a/inventory/group_vars/manila_all/source_git.yml
+++ b/inventory/group_vars/manila_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Manila service
 manila_git_repo: "{{ openstack_opendev_base_url }}/openstack/manila"
-manila_git_install_branch: 36d73aa54ec271262aad7073067c689fd11db291
-manila_git_track_branch: stable/2025.2
+manila_git_install_branch: e8c8380777e609b0ba2dedb89ed7c8fef7afc2a0
+manila_git_track_branch: master
