--- a/inventory/group_vars/masakari_all/source_git.yml
+++ b/inventory/group_vars/masakari_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Masakari service
 masakari_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari"
-masakari_git_install_branch: 8489c366bb9237ca256325f6e7d96b5152acccfd
-masakari_git_track_branch: stable/2025.2
+masakari_git_install_branch: b66c48d69b7fdeaadc96d528c135bfa0fe9b4322
+masakari_git_track_branch: master
 
 ## Masakari monitors services
 masakari_monitors_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari-monitors"
-masakari_monitors_git_install_branch: 70358ade156c3f6f249e95f8515d0144fdb563a5
-masakari_monitors_git_track_branch: stable/2025.2
+masakari_monitors_git_install_branch: e8d891e31947ee08f5561d878bdd7dad5920086b
+masakari_monitors_git_track_branch: master
