--- a/inventory/group_vars/mistral_all/source_git.yml
+++ b/inventory/group_vars/mistral_all/source_git.yml
@@ -13,13 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Mistral service
 mistral_git_repo: "{{ openstack_opendev_base_url }}/openstack/mistral"
-mistral_git_install_branch: f05fb9f9ce851ffab86aeede037e7daf30bd3281
-mistral_git_track_branch: stable/2025.2
+mistral_git_install_branch: 98ab4a772e79c65f86b38fced791ce63deb71489
+mistral_git_track_branch: master
 
 mistral_extra_git_repo: "{{ openstack_opendev_base_url }}/openstack/mistral-extra"
-mistral_extra_git_install_branch: 6415c4e03e83321c448329eb86f655eee6a93d1f
-mistral_extra_git_track_branch: stable/2025.2
+mistral_extra_git_install_branch: c19760acc1032599df42f1e76491d04d7510cc38
+mistral_extra_git_track_branch: master
