--- a/inventory/group_vars/neutron_all/source_git.yml
+++ b/inventory/group_vars/neutron_all/source_git.yml
@@ -13,36 +13,36 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Neutron service
 neutron_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron"
-neutron_git_install_branch: e3e5f628e2a95f84e99b2e00f699cd96e768c7a9
-neutron_git_track_branch: stable/2025.2
+neutron_git_install_branch: 4d2c562d2250a02b88524fcddae2066b1b17abe2
+neutron_git_track_branch: master
 
 neutron_vpnaas_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-vpnaas"
-neutron_vpnaas_git_install_branch: 7fbb8f3fa469d831beee216dae1c1829f0173be5
-neutron_vpnaas_git_track_branch: stable/2025.2
+neutron_vpnaas_git_install_branch: 43743ad9d35b078bc434e3262eb3570422b64af7
+neutron_vpnaas_git_track_branch: master
 
 neutron_fwaas_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-fwaas"
-neutron_fwaas_git_install_branch: 619969cb98dba35832e851ce0e1edaa3a52bf449
-neutron_fwaas_git_track_branch: stable/2025.2
+neutron_fwaas_git_install_branch: 37eae5e11d51794bd44dead705da1571822cb4e7
+neutron_fwaas_git_track_branch: master
 
 neutron_dynamic_routing_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-dynamic-routing"
-neutron_dynamic_routing_git_install_branch: 229ef20405f7767ebcb7a4e865ee11f874026306
-neutron_dynamic_routing_git_track_branch: stable/2025.2
+neutron_dynamic_routing_git_install_branch: 3cba8d7b3ad7b06414ddae8470b080a8479974a3
+neutron_dynamic_routing_git_track_branch: master
 
 networking_bgpvpn_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-bgpvpn"
-networking_bgpvpn_git_install_branch: 034e63b2cadd74380e4d0e20ab93f84e9f6a6158
-networking_bgpvpn_git_track_branch: stable/2025.2
+networking_bgpvpn_git_install_branch: 24fdac3dc1d0d6407cdae1d95b6ec606cd55ae4c
+networking_bgpvpn_git_track_branch: master
 
 networking_sfc_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-sfc"
-networking_sfc_git_install_branch: 861013d2f6172a168897e5863caeb44fa298d760
-networking_sfc_git_track_branch: stable/2025.2
+networking_sfc_git_install_branch: d615b5d90cfd928999e633749a6848312e1e2800
+networking_sfc_git_track_branch: master
 
 networking_generic_switch_git_repo: "{{ openstack_opendev_base_url}}/openstack/networking-generic-switch"
-networking_generic_switch_git_install_branch: a1bf021c4b55e30feeaa70b33e9f643875eb0784
-networking_generic_switch_git_track_branch: stable/2025.2
+networking_generic_switch_git_install_branch: 3a5194c24337b52b5df3ed40f69b22b78fab5f4b
+networking_generic_switch_git_track_branch: master
 
 networking_nsx_git_repo: "{{ openstack_opendev_base_url }}/x/vmware-nsx"
 networking_nsx_git_install_branch: 715cb5fc1174b9226f043e49ffd389add44f070a
@@ -53,9 +53,9 @@ networking_nsxlib_git_install_branch: 948a72da034acdd74a08eded88aa19b080e40927
 networking_nsxlib_git_track_branch: master
 
 networking_baremetal_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-baremetal"
-networking_baremetal_git_install_branch: 26e27854cba1e6c9134783161ca7818628d550cb
-networking_baremetal_git_track_branch: stable/2025.2
+networking_baremetal_git_install_branch: 231493fd7f25244a87a4412f02bdfed8db324af1
+networking_baremetal_git_track_branch: master
 
 networking_ovn_bgp_git_repo: "{{ openstack_opendev_base_url }}/openstack/ovn-bgp-agent"
-networking_ovn_bgp_git_install_branch: fe0d730b960dd9d0b6731a81bea148b36e63af8d
-networking_ovn_bgp_git_track_branch: stable/2025.2
+networking_ovn_bgp_git_install_branch: 14cad4a21bfb69c225292e1f3785c73bf536b55f
+networking_ovn_bgp_git_track_branch: master
