--- a/inventory/group_vars/placement_all/source_git.yml
+++ b/inventory/group_vars/placement_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Placement service
 placement_git_repo: "{{ openstack_opendev_base_url }}/openstack/placement"
-placement_git_install_branch: 192f62baada531b8ae96a2e6eac07506034dbdc3
-placement_git_track_branch: stable/2025.2
+placement_git_install_branch: 1c16485a11946441b0e4893ed9ee1cafadbe4527
+placement_git_track_branch: master
