--- a/inventory/group_vars/skyline_all/source_git.yml
+++ b/inventory/group_vars/skyline_all/source_git.yml
@@ -13,13 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Skyline service
 skyline_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-apiserver"
-skyline_git_install_branch: 0eb553bc742834c29676b6ad19aaa95a5a250306
-skyline_git_track_branch: stable/2025.2
+skyline_git_install_branch: cd31aa512728564b7efa1c1f06a8f8c6d1d9f643
+skyline_git_track_branch: master
 
 skyline_console_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-console"
-skyline_console_git_install_branch: 7.0.0.0rc1
+skyline_console_git_install_branch: 7.0.0
 skyline_console_git_track_branch: None
