--- a/inventory/group_vars/swift_all/source_git.yml
+++ b/inventory/group_vars/swift_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Swift service
 swift_git_repo: "{{ openstack_opendev_base_url }}/openstack/swift"
-swift_git_install_branch: 1922c2da2a642ec77ba0c74461a53f2e280cec7a
-swift_git_track_branch: stable/2025.2
+swift_git_install_branch: 20a2c47d9f5d0883c7a68baaab1c9e2c061f6748
+swift_git_track_branch: master
