--- a/inventory/group_vars/trove_all/source_git.yml
+++ b/inventory/group_vars/trove_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Trove service
 trove_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove"
-trove_git_install_branch: 8a864a0360af3ecf52edf82b48fcfb1dfd8aed9c
-trove_git_track_branch: stable/2025.2
+trove_git_install_branch: 3ec0c5f8dd634525e2606ec1945a070cb69690fd
+trove_git_track_branch: master
