--- a/inventory/group_vars/zun_all/source_git.yml
+++ b/inventory/group_vars/zun_all/source_git.yml
@@ -13,19 +13,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Zun service
 zun_git_repo: "{{ openstack_opendev_base_url }}/openstack/zun"
-zun_git_install_branch: 038fd573f75040ca047bac27ad272a3589b49726
-zun_git_track_branch: stable/2025.2
+zun_git_install_branch: 1924235401f2788b6ed6c96ceabeb81fbc21e044
+zun_git_track_branch: master
 
 ## Zun kuryr service
 zun_kuryr_git_repo: "{{ openstack_opendev_base_url }}/openstack/kuryr-libnetwork"
-zun_kuryr_git_install_branch: 9d6c576a34c9ee6f1cb669e7303f24c70eb4be8a
-zun_kuryr_git_track_branch: stable/2025.2
+zun_kuryr_git_install_branch: cabde0c58ce799cf1a77a9b0d3125011f088a49d
+zun_kuryr_git_track_branch: master
 
 ## Zun kuryr library
 zun_kuryr_lib_git_repo: "{{ openstack_opendev_base_url }}/openstack/kuryr"
-zun_kuryr_lib_git_install_branch: 234bdd38a048155a9dd443280bc6de7ad12de4d5
-zun_kuryr_lib_git_track_branch: stable/2025.2
+zun_kuryr_lib_git_install_branch: 77e7688e9b3c4f111c72ef34b654bdc1017fd5ce
+zun_kuryr_lib_git_track_branch: master
