--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -72,10 +72,16 @@
     name: openstack-ansible-upgrade-aio_metal-jobs
     check:
       jobs:
+        - openstack-ansible-upgrade-aio_metal-rockylinux-10
+        - openstack-ansible-upgrade_2025.1-aio_metal-rockylinux-10
         - openstack-ansible-upgrade-aio_metal-ubuntu-noble
+        - openstack-ansible-upgrade_2025.1-aio_metal-ubuntu-noble
     gate:
       jobs:
+        - openstack-ansible-upgrade-aio_metal-rockylinux-10
+        - openstack-ansible-upgrade_2025.1-aio_metal-rockylinux-10
         - openstack-ansible-upgrade-aio_metal-ubuntu-noble
+        - openstack-ansible-upgrade_2025.1-aio_metal-ubuntu-noble
 
 - project-template:
     name: openstack-ansible-deploy-infra_lxc-jobs
@@ -190,7 +196,10 @@
         - openstack-ansible-deploy-aio_metal_tls-rockylinux-10
         - openstack-ansible-deploy-aio_metal-ubuntu-noble
         - openstack-ansible-deploy-aio_metal_tls-ubuntu-noble
+        - openstack-ansible-upgrade-aio_metal-rockylinux-10
+        - openstack-ansible-upgrade_2025.1-aio_metal-rockylinux-10
         - openstack-ansible-upgrade-aio_metal-ubuntu-noble
+        - openstack-ansible-upgrade_2025.1-aio_metal-ubuntu-noble
         - openstack-ansible-upgrade-aio_metal_tls-ubuntu-noble
 
     gate:
