--- a/inventory/group_vars/all/source_git.yml
+++ b/inventory/group_vars/all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Global Requirements
 requirements_git_repo: "{{ openstack_opendev_base_url }}/openstack/requirements"
-requirements_git_install_branch: 7d16424510c49daa913fc20a6300427b72522231
-requirements_git_track_branch: stable/2025.2
+requirements_git_install_branch: f5707cc58f7152a82d93933a9863587af5f0ffa7
+requirements_git_track_branch: master
