--- a/inventory/group_vars/designate_all/source_git.yml
+++ b/inventory/group_vars/designate_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 26.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Designate service
 designate_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate"
-designate_git_install_branch: 4e29c8308526cdb013aee09ff8f30e44b02f0911
-designate_git_track_branch: stable/2025.2
+designate_git_install_branch: 3bc81788322f10a8ada3e685a4417f4cc88f3942
+designate_git_track_branch: master
