--- a/inventory/group_vars/heat_all/source_git.yml
+++ b/inventory/group_vars/heat_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Heat service
 heat_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat"
-heat_git_install_branch: f2db16ff6bfd17c76566d14c02b494b2d3db1c11
-heat_git_track_branch: stable/2025.2
+heat_git_install_branch: 7f17f5010813e1648cba50a8b64edffce67bfd12
+heat_git_track_branch: master
