--- a/inventory/group_vars/horizon_all/source_git.yml
+++ b/inventory/group_vars/horizon_all/source_git.yml
@@ -13,17 +13,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Horizon service
 horizon_git_repo: "{{ openstack_opendev_base_url }}/openstack/horizon"
-horizon_git_install_branch: 4432320c20f960da2bf842ce86e6501754457587
-horizon_git_track_branch: stable/2025.2
+horizon_git_install_branch: 29e5ad799b510dba0f3359925cd7a25030f2daf8
+horizon_git_track_branch: master
 
 ## Adjutant dashboard plugin
 adjutant_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/adjutant-ui"
-adjutant_dashboard_git_install_branch: 6897a03a69075f43710123d9c628d5b9fdd65fb3
-adjutant_dashboard_git_track_branch: stable/2025.2
+adjutant_dashboard_git_install_branch: 126b77de7cea15adc31a42c8b8ea9518bfcc76b5
+adjutant_dashboard_git_track_branch: master
 
 ## Barbican dashboard plugin
 barbican_dashboard_git_repo: "{{ openstack_opendev_base_url }}//openstack/barbican-ui"
@@ -32,50 +32,50 @@ barbican_dashboard_git_track_branch: master
 
 ## Cloudkitty dashboard plugin
 cloudkitty_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/cloudkitty-dashboard"
-cloudkitty_dashboard_git_install_branch: 6efad66dcd530028129aadef4a9289ff55d5b85b
-cloudkitty_dashboard_git_track_branch: stable/2025.2
+cloudkitty_dashboard_git_install_branch: afe788dd223679fde7e45b539841c0e1bd3cafbd
+cloudkitty_dashboard_git_track_branch: master
 
 ## Horizon Designate dashboard plugin
 designate_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate-dashboard"
-designate_dashboard_git_install_branch: 9f1e7e9855dc58aa8d3a2ef24eea758a93963b90
-designate_dashboard_git_track_branch: stable/2025.2
+designate_dashboard_git_install_branch: 412b8f0db05749c2274c20bb1fb157ac534901ef
+designate_dashboard_git_track_branch: master
 
 ## Horizon Heat dashboard plugin
 heat_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat-dashboard"
-heat_dashboard_git_install_branch: 7ee87d7504e97e0538697ba6d7f58884994db7ac
-heat_dashboard_git_track_branch: stable/2025.2
+heat_dashboard_git_install_branch: fbba593cb1270ede678c8e5bf40cad944b8609ad
+heat_dashboard_git_track_branch: master
 
 ## Horizon Ironic dashboard plugin
 ironic_dashboard_git_repo: "{{ openstack_opendev_base_url}}/openstack/ironic-ui"
-ironic_dashboard_git_install_branch: c537b9562addf2f61fcbb324959460d9fb5b885d
-ironic_dashboard_git_track_branch: stable/2025.2
+ironic_dashboard_git_install_branch: fc986ecf74dcea1d913200b41606523fa883e218
+ironic_dashboard_git_track_branch: master
 
 ## Horizon Magnum dashboard plugin
 magnum_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/magnum-ui"
-magnum_dashboard_git_install_branch: 8b85469c841a151d19b0f09eaf6bdc76f1d44f3b
-magnum_dashboard_git_track_branch: stable/2025.2
+magnum_dashboard_git_install_branch: 4b6ec099cccd449dcddc031e5aab19d13d6af585
+magnum_dashboard_git_track_branch: master
 
 ## Horizon Masakari dashboard plugin
 masakari_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari-dashboard"
-masakari_dashboard_git_install_branch: 9bf0bc6e4002db3490dccf714979b83888a9eb2d
-masakari_dashboard_git_track_branch: stable/2025.2
+masakari_dashboard_git_install_branch: 02fd1421d21fad0cd1b11d9cb4d84336efd9d0e2
+masakari_dashboard_git_track_branch: master
 
 ## Horizon Trove dashboard plugin
 trove_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove-dashboard"
-trove_dashboard_git_install_branch: b2082772ee8fa8025203e5bfd6927c3aa206a799
-trove_dashboard_git_track_branch: stable/2025.2
+trove_dashboard_git_install_branch: 8e7b081c0b4b74af0a140f98ebe598c5297080f3
+trove_dashboard_git_track_branch: master
 
 ## Horizon Octavia dashboard plugin
 octavia_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/octavia-dashboard"
-octavia_dashboard_git_install_branch: a67d1cd7b9217dfafd8456af8f62ad02ed72663e
-octavia_dashboard_git_track_branch: stable/2025.2
+octavia_dashboard_git_install_branch: 727ff80333ac0d5603fc3fcfd4b2362fb21a26b6
+octavia_dashboard_git_track_branch: master
 
 ## Horizon Neutron VPNaaS dashboard plugin
 neutron_vpnaas_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-vpnaas-dashboard"
-neutron_vpnaas_dashboard_git_install_branch: 9bf310507187b7e0d4be71a56e47ce1d103b7f23
-neutron_vpnaas_dashboard_git_track_branch: stable/2025.2
+neutron_vpnaas_dashboard_git_install_branch: c4bbd69944b672cbc4b0da0e93f695e8bc5ad42b
+neutron_vpnaas_dashboard_git_track_branch: master
 
 ## Horizon Neutron FWaaS dashboard plugin
 neutron_fwaas_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-fwaas-dashboard"
-neutron_fwaas_dashboard_git_install_branch: 3d1bc46f7ad2107e85adf0528c396c19b22188ea
-neutron_fwaas_dashboard_git_track_branch: stable/2025.2
+neutron_fwaas_dashboard_git_install_branch: 9a44be663379e9b0a0e1c9308a9e9a9da7edda6e
+neutron_fwaas_dashboard_git_track_branch: master
