--- a/inventory/group_vars/ironic_all/source_git.yml
+++ b/inventory/group_vars/ironic_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Ironic service
 ironic_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic"
-ironic_git_install_branch: faecbdc13cae44c408ede63a9e47c6253c429a30
-ironic_git_track_branch: stable/2025.2
+ironic_git_install_branch: 04aa88aae424641e309e35067c478089469a36b7
+ironic_git_track_branch: master
 
 ## Ironic inspector service
 ironic_inspector_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic-inspector"
-ironic_inspector_git_install_branch: 743b60addf02c86dcc150a37de42dd46956812fe
-ironic_inspector_git_track_branch: stable/2025.2
+ironic_inspector_git_install_branch: 7bb56b3c5a8b18f87221edd3405ced2a3571b446
+ironic_inspector_git_track_branch: master
