--- a/inventory/group_vars/keystone_all/source_git.yml
+++ b/inventory/group_vars/keystone_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Keystone service
 keystone_git_repo: "{{ openstack_opendev_base_url }}/openstack/keystone"
-keystone_git_install_branch: 680ec90e47223dbe88865e76fe251c75997f6a7a
-keystone_git_track_branch: stable/2025.2
+keystone_git_install_branch: 1b62ceb5bc495d8221f267462640ba2574180eec
+keystone_git_track_branch: master
