--- a/inventory/group_vars/octavia_all/source_git.yml
+++ b/inventory/group_vars/octavia_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Octavia service
 octavia_git_repo: "{{ openstack_opendev_base_url }}/openstack/octavia"
-octavia_git_install_branch: 427928651408a10402f7de3a70e5e27bc3dfad79
-octavia_git_track_branch: stable/2025.2
+octavia_git_install_branch: bf16995711034b65a761eb85fcd786eb53edc0d4
+octavia_git_track_branch: master
 
 ## Octavia OVN provider
 octavia_ovn_octavia_provider_git_repo: "{{ openstack_opendev_base_url }}/openstack/ovn-octavia-provider"
-octavia_ovn_octavia_provider_git_install_branch: 345a8dee51f58360a707bd854ebe92019779980d
-octavia_ovn_octavia_provider_git_track_branch: stable/2025.2
+octavia_ovn_octavia_provider_git_install_branch: 65a4e822ce88453cff171c1a5a38d328d23331d9
+octavia_ovn_octavia_provider_git_track_branch: master
