--- a/inventory/group_vars/tacker_all/source_git.yml
+++ b/inventory/group_vars/tacker_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 04.12.2025 ###
+### HEAD as of 08.12.2025 ###
 
 ## Tacker service
 tacker_git_repo: "{{ openstack_opendev_base_url }}/openstack/tacker"
-tacker_git_install_branch: 148d97393156c5231c1dde8ff3ce5a5ea5f84348
-tacker_git_track_branch: stable/2025.2
+tacker_git_install_branch: 4f8933870373dc339cc96a575532da40805fbd83
+tacker_git_track_branch: master
