--- a/inventory/group_vars/utility_all/source_git.yml
+++ b/inventory/group_vars/utility_all/source_git.yml
@@ -13,84 +13,84 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 08.12.2025 ###
 
 tempest_git_repo: "{{ openstack_opendev_base_url }}/openstack/tempest"
-tempest_git_install_branch: 290069b157d948b76ab04993d8b6b5ae9e74e212
-tempest_git_track_branch: None
+tempest_git_install_branch: 0fb92d6d06e4201d836c3b7bae583a2a029497d6
+tempest_git_track_branch: master
 
 tempest_plugin_barbican_git_repo: "{{ openstack_opendev_base_url }}/openstack/barbican-tempest-plugin"
-tempest_plugin_barbican_git_install_branch: 2cd185133a86242c58d721e66c2db753a369fe60
-tempest_plugin_barbican_git_track_branch: None
+tempest_plugin_barbican_git_install_branch: debd1648449976dd92d9df165af19e11bd43424a
+tempest_plugin_barbican_git_track_branch: master
 
 tempest_plugin_blazar_git_repo: "{{ openstack_opendev_base_url }}/openstack/blazar-tempest-plugin"
-tempest_plugin_blazar_git_install_branch: a834e47ef252750ca5e8e4b6bd1233fcaafa4322
-tempest_plugin_blazar_git_track_branch: None
+tempest_plugin_blazar_git_install_branch: d5cf88ccc34cfb71bcf59dd3db7e75462587c8a3
+tempest_plugin_blazar_git_track_branch: master
 
 tempest_plugin_cinder_git_repo: "{{ openstack_opendev_base_url }}/openstack/cinder-tempest-plugin"
-tempest_plugin_cinder_git_install_branch: 1357d5dccffc2cd6c1e8a13e84c065d5bd55e4d5
-tempest_plugin_cinder_git_track_branch: None
+tempest_plugin_cinder_git_install_branch: 058e172729cde892e61ee65c931d5defc0d3d81c
+tempest_plugin_cinder_git_track_branch: master
 
 tempest_plugin_cloudkitty_git_repo: "{{ openstack_opendev_base_url }}/openstack/cloudkitty-tempest-plugin"
-tempest_plugin_cloudkitty_git_install_branch: 3961dcddb873b1ff6710d7df0739c4285dd71f8c
-tempest_plugin_cloudkitty_git_track_branch: None
+tempest_plugin_cloudkitty_git_install_branch: 2c80f80e02c5accd099187ea762c8f8389bd7905
+tempest_plugin_cloudkitty_git_track_branch: master
 
 tempest_plugin_designate_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate-tempest-plugin"
-tempest_plugin_designate_git_install_branch: bd3e9f19ebcff27250198e6f6a5ac12b9cbb50e2
-tempest_plugin_designate_git_track_branch: None
+tempest_plugin_designate_git_install_branch: 88fc51f6327a4b8ac50078380d0fc91eca7eb449
+tempest_plugin_designate_git_track_branch: master
 
 tempest_plugin_glance_git_repo: "{{ openstack_opendev_base_url }}/openstack/glance-tempest-plugin"
 tempest_plugin_glance_git_install_branch: be482976001ba5e946029ddd0e3fe8ee1852568d
-tempest_plugin_glance_git_track_branch: None
+tempest_plugin_glance_git_track_branch: master
 
 tempest_plugin_heat_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat-tempest-plugin"
-tempest_plugin_heat_git_install_branch: 1ce78d2eba96678955e3be10096fc239b08ba809
-tempest_plugin_heat_git_track_branch: None
+tempest_plugin_heat_git_install_branch: 67df0de82d4d4ea2bdfcbd10c5d1ed4813f3779b
+tempest_plugin_heat_git_track_branch: master
 
 tempest_plugin_ironic_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic-tempest-plugin"
-tempest_plugin_ironic_git_install_branch: fa630483afe3b469c2eddeb9aba57ddf3c807d66
-tempest_plugin_ironic_git_track_branch: None
+tempest_plugin_ironic_git_install_branch: 4d55945d520fd9c514c2f9983dca520925a30df9
+tempest_plugin_ironic_git_track_branch: master
 
 tempest_plugin_keystone_git_repo: "{{ openstack_opendev_base_url }}/openstack/keystone-tempest-plugin"
-tempest_plugin_keystone_git_install_branch: bab7165ee8aef4abb796db587299c773bc105ee1
-tempest_plugin_keystone_git_track_branch: None
+tempest_plugin_keystone_git_install_branch: 97d6de342fc0b7487c2dc99765c4717850758afc
+tempest_plugin_keystone_git_track_branch: master
 
 tempest_plugin_magnum_git_repo: "{{ openstack_opendev_base_url }}/openstack/magnum-tempest-plugin"
-tempest_plugin_magnum_git_install_branch: f3d318fbe775f56a9e17bd7a80c39b0a2ff2dd79
-tempest_plugin_magnum_git_track_branch: None
+tempest_plugin_magnum_git_install_branch: e42f390a87658598d55655818bbd87836a24754b
+tempest_plugin_magnum_git_track_branch: master
 
 tempest_plugin_manila_git_repo: "{{ openstack_opendev_base_url }}/openstack/manila-tempest-plugin"
-tempest_plugin_manila_git_install_branch: 53cf5e810bec87fc7acfee60709b94508ccecd41
-tempest_plugin_manila_git_track_branch: None
+tempest_plugin_manila_git_install_branch: 283b664c8be0655bcf370bce10c851cf8dacd2c6
+tempest_plugin_manila_git_track_branch: master
 
 tempest_plugin_neutron_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-tempest-plugin"
-tempest_plugin_neutron_git_install_branch: 9c22c14682afa1168d0e1bd1cd1efb092c28a8fe
-tempest_plugin_neutron_git_track_branch: None
+tempest_plugin_neutron_git_install_branch: a664f75019c5ab751fde36fe30ca2a9856400f86
+tempest_plugin_neutron_git_track_branch: master
 
 tempest_plugin_novajoin_git_repo: "{{ openstack_opendev_base_url }}/x/novajoin-tempest-plugin"
 tempest_plugin_novajoin_git_install_branch: d4a39ceb0f636de6a5b07b99a5a04a7a272dd398
-tempest_plugin_novajoin_git_track_branch: None
+tempest_plugin_novajoin_git_track_branch: master
 
 tempest_plugin_octavia_git_repo: "{{ openstack_opendev_base_url }}/openstack/octavia-tempest-plugin"
-tempest_plugin_octavia_git_install_branch: 2f3e8a379573dc8c7cb13a5395f55ba00790fe59
-tempest_plugin_octavia_git_track_branch: None
+tempest_plugin_octavia_git_install_branch: 32b3716676ce34583003ac01689c9e0d79963bee
+tempest_plugin_octavia_git_track_branch: master
 
 tempest_plugin_telemetry_git_repo: "{{ openstack_opendev_base_url }}/openstack/telemetry-tempest-plugin"
-tempest_plugin_telemetry_git_install_branch: e0faa9f9a0e375e5f2a43d39aa82925eee659d7f
-tempest_plugin_telemetry_git_track_branch: None
+tempest_plugin_telemetry_git_install_branch: dcd19b0198fcdc55c149d545a52923f4b88621be
+tempest_plugin_telemetry_git_track_branch: master
 
 tempest_plugin_trove_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove-tempest-plugin"
 tempest_plugin_trove_git_install_branch: ac0e75b1b64e8b14e66c7395bb51bead8b43458c
-tempest_plugin_trove_git_track_branch: None
+tempest_plugin_trove_git_track_branch: master
 
 tempest_plugin_zaqar_git_repo: "{{ openstack_opendev_base_url }}/openstack/zaqar-tempest-plugin"
-tempest_plugin_zaqar_git_install_branch: ce820031e72df551889334f98132683be42c713c
-tempest_plugin_zaqar_git_track_branch: None
+tempest_plugin_zaqar_git_install_branch: 837d5194bdd71f2acbe9974be75e93b127f00430
+tempest_plugin_zaqar_git_track_branch: master
 
 tempest_plugin_zun_git_repo: "{{ openstack_opendev_base_url }}/openstack/zun-tempest-plugin"
-tempest_plugin_zun_git_install_branch: b373770606595435ab0572cad5217673295fa1ff
-tempest_plugin_zun_git_track_branch: None
+tempest_plugin_zun_git_install_branch: d8595f07c74f1314f15beb8e42ca68d2b552a036
+tempest_plugin_zun_git_track_branch: master
 
 rally_openstack_git_repo: "{{ openstack_opendev_base_url }}/openstack/rally-openstack"
-rally_openstack_git_install_branch: 1d37beb78b1b0cb7b2e848c6861f7d035ed781ec
-rally_openstack_git_track_branch: None
+rally_openstack_git_install_branch: c3c6de98043b5de9dc903952954cf6f5a2c38896
+rally_openstack_git_track_branch: master
