--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -2,301 +2,301 @@
 - name: ansible-hardening
   scm: git
   src: https://opendev.org/openstack/ansible-hardening
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-25'
 - name: frrouting
   scm: git
   src: https://opendev.org/openstack/ansible-role-frrouting
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: pki
   src: https://opendev.org/openstack/ansible-role-pki
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: python_venv_build
   src: https://opendev.org/openstack/ansible-role-python_venv_build
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-09'
 - name: qdrouterd
   scm: git
   src: https://opendev.org/openstack/ansible-role-qdrouterd
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: systemd_mount
   src: https://opendev.org/openstack/ansible-role-systemd_mount
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: systemd_networkd
   src: https://opendev.org/openstack/ansible-role-systemd_networkd
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-07'
 - name: systemd_service
   src: https://opendev.org/openstack/ansible-role-systemd_service
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: uwsgi
   src: https://opendev.org/openstack/ansible-role-uwsgi
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-29'
 - name: zookeeper
   src: https://opendev.org/openstack/ansible-role-zookeeper
   scm: git
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: apt_package_pinning
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-apt_package_pinning
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: ceph_client
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-ceph_client
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-11-08'
 - name: galera_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-galera_server
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-06-03'
 - name: haproxy_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-haproxy_server
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-23'
 - name: lxc_container_create
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_container_create
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-07'
 - name: lxc_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_hosts
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-09'
 - name: memcached_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-memcached_server
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: openstack_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_hosts
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-10-02'
 - name: openstack_openrc
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_openrc
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_adjutant
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_adjutant
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_aodh
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_aodh
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_barbican
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_barbican
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_blazar
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_blazar
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_ceilometer
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ceilometer
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-02'
 - name: os_cinder
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cinder
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-23'
 - name: os_cloudkitty
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cloudkitty
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_designate
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_designate
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_glance
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_glance
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_gnocchi
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_gnocchi
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_heat
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_heat
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-06'
 - name: os_horizon
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_horizon
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-10-01'
 - name: os_ironic
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ironic
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-30'
 - name: os_keystone
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_keystone
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-09-13'
 - name: os_magnum
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_magnum
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-11'
 - name: os_manila
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_manila
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-10-01'
 - name: os_masakari
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_masakari
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-05'
 - name: os_mistral
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_mistral
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_neutron
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_neutron
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-11-03'
 - name: os_nova
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_nova
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-23'
 - name: os_octavia
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_octavia
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-23'
 - name: os_placement
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_placement
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_rally
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_rally
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-11-11'
 - name: os_skyline
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_skyline
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-05'
 - name: os_swift
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_swift
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_tacker
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tacker
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_tempest
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tempest
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-05-07'
 - name: os_trove
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_trove
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_zun
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_zun
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-05'
 - name: rabbitmq_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-rabbitmq_server
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2024-11-17'
 - name: repo_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-repo_server
-  version: 2024.1-eom
+  version: unmaintained/2024.1
   trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-12'
 # External dependencies
