Fix requirements SHA
Using 2024.1-eom is not really supported, as [1] results in 404 as not
having expected redirect.

We also disable CI for Rocky jobs as GPG key fetching is broken now.

[1] https://releases.openstack.org/constraints/upper/2024.1-eom

Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-rabbitmq_server/+/972504
Change-Id: I267b9a8d7b0be22f618b164f29b57609584fe4ac
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/inventory/group_vars/all/source_git.yml
+++ b/inventory/group_vars/all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Global Requirements
 requirements_git_repo: "{{ openstack_opendev_base_url }}/openstack/requirements"
-requirements_git_install_branch: 2024.1-eom
+requirements_git_install_branch: 0cbeda0d64ed79d76ad0c24ca4d16bad7313aae6
 requirements_git_track_branch: unmaintained/2024.1
