Update Ansible Core to 2.19
Depends-On: https://review.opendev.org/c/openstack/ansible-config_template/+/948915
Depends-On: https://review.opendev.org/c/openstack/ansible-role-pki/+/971772
Depends-On: https://review.opendev.org/c/openstack/ansible-role-systemd_service/+/971771
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-openstack_hosts/+/975033
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-haproxy_server/+/975035
Depends-On: https://review.opendev.org/c/openstack/ansible-role-python_venv_build/+/975044
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_keystone/+/975052
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_cinder/+/975054
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-plugins/+/975270
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-galera_server/+/975250
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_nova/+/975255
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_neutron/+/975267
Depends-On: https://review.opendev.org/c/openstack/ansible-hardening/+/975502
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-rabbitmq_server/+/977934

Change-Id: I14e333cf1390070bafba9b1979f2704c5457f53e
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -402,6 +402,8 @@
     name: openstack-ansible-deploy-aio_ceph-ubuntu-noble
     parent: openstack-ansible-deploy-aio
     nodeset: ubuntu-noble
+    vars:
+      ansible_package: "ansible-core<2.19"
 
 - job:
     name: openstack-ansible-deploy-aio_nfs-ubuntu-noble
